--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
 
             <div class="subheading mb-3">Training Conducted</div>
                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-trophy"></i>Search Engine Optimisation SEO Essential Training (2023)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Arduino Training (The One Academy) (2020)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Arduino School Workshop (3 schools) (2019)</li>
                     <li><i class="fa-li fa fa-trophy"></i>SMK St. Xavier's Electronics Club (2018-2020)</li>
