--- a/index.html
+++ b/index.html
@@ -375,10 +375,10 @@
 
             <div class="subheading mb-3">Projects Supervised</div>
             <ul class="fa-ul mb-0">
-                <li><i class="fa-li fa fa-home"></i><a>IoT Medicine Dispenser Machine</a> (2021 - 2022)</li>
+                <li><i class="fa-li fa fa-home"></i><a>Medicine Dispenser Machine</a> (2021 - 2022)</li>
             </ul>
             <ul class="fa-ul mb-0">
-                <li><i class="fa-li fa fa-home"></i><a>IoT Car Wash System</a> (2021 - 2022)</li>
+                <li><i class="fa-li fa fa-home"></i><a>Car Wash System</a> (2021 - 2022)</li>
             </ul>
             <ul class="fa-ul mb-0">
                 <li><i class="fa-li fa fa-home"></i><a>Chocolate Packaging Machine</a> (2021 - 2022)</li>
