--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             <div class="subheading mb-3">Contact details</div>
             <ul class="fa-ul mb-0">
                 <li><i class="fa fa-home"></i> Penang, Malaysia</li>
-                <li><i class="fa fa-envelope"></i> ask@zahin.my</li>
+                <li><i class="fa fa-envelope"></i> zahin@zahin.my</li>
             </ul>
         </div>
     </section>
