--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Muhammad Zahin Bin Samsuddin">
     <!--<meta name="keywords" content="Engineering, Instructor, Trainer, Maker,">-->
 
-    <title>Muhammad Zahin Bin Samsuddin</title>
+    <title>Zahin Samsuddin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
