--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
             <div class="my-auto">
-                <h1 class="mb-0">Muhammad Zahin
-            <span class="text-primary">Bin Samsuddin</span>
+                <h1 class="mb-0">Zahin
+            <span class="text-primary">Samsuddin</span>
           </h1>
                 <div class="subheading mb-5">AMHS Equipment Technician
                     <br/>
