--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="Muhammad Zahin Bin Samsuddin - AMHS Equipment Technician at Intel Corporation">
-    <meta name="author" content="Muhammad Zahin Bin Samsuddin">
+    <meta name="description" content="Zahin Samsuddin - AMHS Equipment Technician at Intel Corporation">
+    <meta name="author" content="Zahin Samsuddin">
     <!--<meta name="keywords" content="Engineering, Instructor, Trainer, Maker,">-->
 
     <title>Zahin Samsuddin</title>
@@ -114,7 +114,7 @@
                 <p class="mb-5"></p>
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
-                        <!--<a href="linkedin://profile?id=muhammadzahinbinsamsuddin" target="_blank">-->
+                        <!--<a href="linkedin://profile?id=zahinsamsuddin" target="_blank">-->
                         <a href="https://my.linkedin.com/in/zahinsamsuddin/" target="_blank" data-toggle="tooltip1" data-original-title="LinkedIn">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
