Add resume link
- Add resume link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/link-function.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QN1BCFRR4M"></script>
@@ -155,6 +156,10 @@
                         </a>
                     </li>
                 </ul>
+                <div class="subheading mb-5">
+                    <br/>
+                    <a target="_blank" href="https://drive.google.com/file/d/1XHWyb0ZqZK47V1KmJD26uizYHu3JuleH/view" class="arrow-link">My Resume </a>
+                </div>
             </div>
         </section>
 
