--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
 
             <div class="subheading mb-3">Awards Received</div>
                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-certificate"></i>Certified HRD Corp Trainer</li>
                     <li><i class="fa-li fa fa-certificate"></i>Best Outstanding Performance Student (2016)</li>
                 </ul>
                 <br>
