Update on experiences

--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="Zahin Samsuddin - AMHS Equipment Technician at Intel Corporation">
+    <meta name="description" content="Zahin Samsuddin - AMHS Automation Module Equipment Technician at Intel Corporation">
     <meta name="author" content="Zahin Samsuddin">
     <!--<meta name="keywords" content="Engineering, Instructor, Trainer, Maker,">-->
 
     <title>Zahin Samsuddin</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 
     <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendor/devicons/css/devicons.min.css">
+    <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/resume.min.css">
     <link rel="stylesheet" href="css/link-function.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QN1BCFRR4M"></script>
@@ -108,7 +109,7 @@
                 <h1 class="mb-0">Zahin
             <span class="text-primary">Samsuddin</span>
           </h1>
-                <div class="subheading mb-5">AMHS Equipment Technician
+                <div class="subheading mb-5">AMHS Automation Module Equipment Technician
                     <br/>
                     <a target="_blank" href="https://www.intel.com">Intel Corporation</a>
                 </div>
@@ -169,7 +170,14 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Ensure automation system OHV, AGV and Stocker available to wafer production system.</li></ol>">AMHS Equipment Technician</h3>
+                        <h3 class="mb-0 collapsible">AMHS Automation Module Equipment Technician</h3>
+                        <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
+                            <li>Perform installation and qualification test of new equipment’s.</li>
+                            <li>Point of contact for equipment training and safety coordination.</li>
+                            <li>Experienced providing onsite support to overseas automation team in Oregon, USA.</li>
+                            <li>Monitor automation system, execute preventive maintenance and troubleshoot problematic and malfunction equipment’s.</li>
+                            <li>Act as engineering support group for manufacturing to provide transport (AGV, OHV) and storage (ASRS) system to wafer production in cleanroom environment.</li>
+                        </ol></div>
                         <div class="subheading mb-3">
                             <a target="_blank" href="https://www.intel.com">Intel Corporation</a>
                         </div>
@@ -181,7 +189,17 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Perform R&D of new ideas.</li><li>Manage work and student projects.</li><li>Develop, update and maintain website.</li><li>Develop training materials and training kits.</li><li>Plan and conduct internal and external training.</li><li>Setup and maintain computer and networking systems.</li><li>Plan and implement latest working and training method.</li><li>Plan digital marketing strategy and update social media pages.</li></ol>">Technical Trainer &#38 IT Support</h3>
+                        <h3 class="mb-0 collapsible">Technical Trainer (Mechatronics), IT Administrator</h3>
+                        <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
+                            <li>Perform R&D of new ideas.</li>
+                            <li>Manage work and student projects.</li>
+                            <li>Develop, update and maintain website.</li>
+                            <li>Develop training materials and training kits.</li>
+                            <li>Plan and conduct internal and external training.</li>
+                            <li>Setup and maintain computer and networking systems.</li>
+                            <li>Setup and conduct maintenance of equipment on schedule.</li>
+                            <li>Plan digital marketing strategy and update social media pages.</li>
+                        </ol></div>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
                         </div>
@@ -209,7 +227,7 @@
                     </div>
                 </div>
 
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <!--<div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Setup and repair IT system and building facility.</li></ol>">Part-Time Maintenance</h3>
                         <div class="subheading mb-3">
@@ -219,11 +237,15 @@
                     <div class="resume-date text-md-right">
                         <span class="text-primary">April 2016 - January 2017</span>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Setting up equipment in the production line including Solder Paste Printer, Solder Paste Inspection (SPI) Machine and SMT Machine (Component and IC Mounter).</li><li>Maintain and ensure all the equipments in a good condition.</li><li>Repair damaged equipments.</li></ol>">Equipment Technician (SMT)</h3>
+                        <h3 class="mb-0 collapsible">Equipment Technician (SMT)</h3>
+                        <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
+                            <li>Set up equipment in the production line including Solder Paste Printer, Solder Paste Inspection (SPI) Machine and SMT Machine (Component and IC Mounter).</li>
+                            <li>Maintain and repair SMT equipment.</li>
+                        </ol></div>
                         <div class="subheading mb-3">
                             <a target="_blank" href="http://www.kesp.com.my/">KESP Sdn Bhd</a>
                         </div>
@@ -235,7 +257,11 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0" data-toggle="tooltip2" data-html="true" title="<ol><li>Conversion and repair of moulding tools.</li><li>Maintain and operate CNC machine and modify G-code program.</li></ol>">Apprentice</h3>
+                        <h3 class="mb-0 collapsible">Apprentice</h3>
+                        <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
+                            <li>Conversion and repair of moulding tools.</li>
+                            <li>Operate CNC machine and modify G-code program.</li>
+                        </ol></div>
                         <div class="subheading mb-3">
                             <a target="_blank" href="https://www.escatec.com/">Escatec Electronics Sdn Bhd</a>
                         </div>
@@ -530,7 +556,7 @@
             <div class="subheading mb-3">Contact details</div>
             <ul class="fa-ul mb-0">
                 <li><i class="fa fa-home"></i> Penang, Malaysia</li>
-                <li><i class="fa fa-envelope"></i> zahin@zahin.my</li>
+                <li><i class="fa fa-envelope"></i> zahinsmd@gmail.com</li>
             </ul>
         </div>
     </section>
@@ -556,6 +582,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+    <script src="js/script.js"></script>
 
     <script>
         $(document).ready(function(){
