--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                  </ul>
                 <br>
 
-            <div class="subheading mb-3">Events Involved</div>
+            <div class="subheading mb-3">Events Involved</div>MCMC Microsoft AI TEACH
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-trophy"></i>Infogenius Virtual Orientation (Host &amp; Speaker) (2021)</li>
                     <li><i class="fa-li fa fa-trophy"></i>Penang International Science Fair (Crew) (2016)</li>
@@ -543,6 +543,7 @@
 
             <div class="subheading mb-3">Other Certifications</div>
                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-certificate"></i>MCMC Microsoft AI TEACH (2024)</li>
                     <li><i class="fa-li fa fa-certificate"></i>Fundamental of Artificial Intelligence (2019)</li>
                     <li><i class="fa-li fa fa-certificate"></i>Create Your Own VR App in 4 Hours(2019)</li>
                 </ul>
