--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">
                 <img width="45" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.png" alt="">
-                <strong>Zahin Samsuddin</strong>
+                <strong>Muhammad Zahin Bin Samsuddin</strong>
             </span>
             <span class="d-none d-lg-block">
                 <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.png" alt="">
@@ -106,8 +106,8 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
             <div class="my-auto">
-                <h1 class="mb-0">Zahin
-            <span class="text-primary">Samsuddin</span>
+                <h1 class="mb-0">Muhammad Zahin
+            <span class="text-primary">Bin Samsuddin</span>
           </h1>
                 <div class="subheading mb-5">AMHS Automation Module Equipment Technician
                     <br/>
