--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="Zahin Samsuddin - AMHS Automation Module Equipment Technician at Intel Corporation">
-    <meta name="author" content="Zahin Samsuddin">
+    <meta name="description" content="Muhammad Zahin Bin Samsuddin - AMHS Automation Module Equipment Technician at Intel Corporation">
+    <meta name="author" content="Muhammad Zahin Bin Samsuddin">
     <!--<meta name="keywords" content="Engineering, Instructor, Trainer, Maker,">-->
 
-    <title>Zahin Samsuddin</title>
+    <title>Muhammad Zahin Bin Samsuddin</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
