--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="Muhammad Zahin Bin Samsuddin - AMHS Automation Module Equipment Technician at Intel Corporation">
+    <meta name="description" content="Muhammad Zahin Bin Samsuddin - Module Equipment Technician (AMHS - Automation Support) at Intel Corporation">
     <meta name="author" content="Muhammad Zahin Bin Samsuddin">
-    <!--<meta name="keywords" content="Engineering, Instructor, Trainer, Maker,">-->
 
     <title>Muhammad Zahin Bin Samsuddin</title>
 
@@ -109,7 +108,7 @@
                 <h1 class="mb-0">Muhammad Zahin
             <span class="text-primary">Bin Samsuddin</span>
           </h1>
-                <div class="subheading mb-5">AMHS Automation Module Equipment Technician
+                <div class="subheading mb-5">Module Equipment Technician (AMHS - Automation Support) 
                     <br/>
                     <a target="_blank" href="https://www.intel.com">Intel Corporation</a>
                 </div>
@@ -170,7 +169,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0 collapsible">AMHS Automation Module Equipment Technician</h3>
+                        <h3 class="mb-0 collapsible">Module Equipment Technician (AMHS - Automation Support) </h3>
                         <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
                             <li>Perform installation and qualification test of new equipment’s.</li>
                             <li>Point of contact for equipment training and safety coordination.</li>
@@ -314,7 +313,7 @@
                     <div>Wawasan Open University</div>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">September 2020 - Present</span>
+                    <span class="text-primary">September 2020 - December 2025</span>
                 </div>
             </div>
 
