--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="Muhammad Zahin Bin Samsuddin - Module Equipment Technician (AMHS - Automation Support) at Intel Corporation">
+    <meta name="description" content="Muhammad Zahin Bin Samsuddin - Module Equipment Technician (AMHS - Automation) at Intel Corporation">
     <meta name="author" content="Muhammad Zahin Bin Samsuddin">
 
     <title>Muhammad Zahin Bin Samsuddin</title>
@@ -108,7 +108,7 @@
                 <h1 class="mb-0">Muhammad Zahin
             <span class="text-primary">Bin Samsuddin</span>
           </h1>
-                <div class="subheading mb-5">Module Equipment Technician (AMHS - Automation Support) 
+                <div class="subheading mb-5">Module Equipment Technician (AMHS - Automation) 
                     <br/>
                     <a target="_blank" href="https://www.intel.com">Intel Corporation</a>
                 </div>
@@ -156,10 +156,10 @@
                         </a>
                     </li>
                 </ul>
-                <div class="subheading mb-5">
+                <!--<div class="subheading mb-5">
                     <br/>
                     <a target="_blank" href="https://drive.google.com/file/d/1XHWyb0ZqZK47V1KmJD26uizYHu3JuleH/view" class="arrow-link">My Resume </a>
-                </div>
+                </div>-->
             </div>
         </section>
 
@@ -169,7 +169,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0 collapsible">Module Equipment Technician (AMHS - Automation Support) </h3>
+                        <h3 class="mb-0 collapsible">Module Equipment Technician (AMHS - Automation) </h3>
                         <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
                             <li>Perform installation and qualification test of new equipment’s.</li>
                             <li>Point of contact for equipment training and safety coordination.</li>
