--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">February 2022 - Present</span>
+                        <span class="text-primary">February 2022 - October 2025</span>
                     </div>
                 </div>
 
@@ -524,7 +524,7 @@
             <!--<div class="subheading mb-3">Awards &amp; Certifications</div>-->
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-certificate"></i>CS50's Introduction to Computer Science (Ongoing)</li>
-                    <li><i class="fa-li fa fa-certificate"></i>MBOT Qualified Technician (2025)</li>
+                    <li><i class="fa-li fa fa-certificate"></i>MBOT Certified Technician (2025)</li>
                     <li><i class="fa-li fa fa-certificate"></i>HRD Corp Accredited Trainer (ID: 2611) (2024)</li>
                     <li><i class="fa-li fa fa-certificate"></i>MCMC Microsoft AI TEACH (2024)</li>
                     <li><i class="fa-li fa fa-certificate"></i>PHP &amp; Web Programming (2021)</li>
