--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <h1 class="mb-0">Muhammad Zahin
             <span class="text-primary">Bin Samsuddin</span>
           </h1>
-                <div class="subheading mb-5">Module Equipment Technician (AMHS - Automation) 
+                <div class="subheading mb-5">Automation Engineer 
                     <br/>
-                    <a target="_blank" href="https://www.intel.com">Intel Corporation</a>
+                    <a target="_blank" href="https://www.pentamaster.com">Pentamaster Corporation Berhad</a>
                 </div>
                 <p class="mb-5"></p>
                 <ul class="list-inline list-social-icons mb-0">
@@ -169,7 +169,27 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0 collapsible">Module Equipment Technician (AMHS - Automation) </h3>
+                        <h3 class="mb-0 collapsible">Automation Engineer</h3>
+                        <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
+                            <li>Develop and maintain automation software and hardware for manufacturing equipment.</li>
+                            <li>Program, test, troubleshoot, and optimize machine performance to meet specifications.</li>
+                            <li>Implement upgrades and retrofits to improve speed, efficiency, and output quality.</li>
+                            <li>Collaborate with cross-functional teams and support customers with technical solutions.</li>
+                            <li>Provide training and guidance to new programmers and internal teams.</li>
+                            <li>Report project progress and assist in delivering automation projects to business goals.</li>
+                        </ol></div>
+                        <div class="subheading mb-3">
+                            <a target="_blank" href="https://www.pentamaster.com">Pentamaster Corporation Berhad</a>
+                        </div>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">October 2025 - Present</span>
+                    </div>
+                </div>
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0 collapsible">AMHS Module Equipment Technician</h3>
                         <div class="mb-0 content" data-toggle="tooltip2" data-html="true"><ol>
                             <li>Perform installation and qualification test of new equipment’s.</li>
                             <li>Point of contact for equipment training and safety coordination.</li>
@@ -203,23 +223,7 @@
                             <a target="_blank" href="http://www.infogenius.com.my">Infogenius Skills Training Centre</a>
                         </div>
 
-                        <!--<p>
-                            <h6>
-                                <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-gitlab fa-stack-1x fa-inverse"></i>
-                                </span> 
-                                Projects Experiance
-                            </h6>
 
-                            <ul>
-                                <li><a href="" target="_blank"></a></li>
-                                <li><a href="" target="_blank"></a></li>
-                                <li><a href="" target="_blank"></a></li>
-                                <li><a href="" target="_blank"></a></li>
-                                <li><a href="" target="_blank"></a></li>
-                            </ul>
-                        </p>-->
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">February 2017 - January 2022</span>
@@ -246,7 +250,7 @@
                             <li>Maintain and repair SMT equipment.</li>
                         </ol></div>
                         <div class="subheading mb-3">
-                            <a target="_blank" href="http://www.kesp.com.my/">KESP Sdn Bhd</a>
+                            <a target="_blank" href="https://kesp.com.my">KESP Sdn Bhd</a>
                         </div>
                     </div>
                     <div class="resume-date text-md-right">
@@ -392,6 +396,9 @@
             <h2 class="mb-5">Projects</h2>
 
             <div class="subheading mb-3">Projects Involved</div>
+                <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-home"></i><a>AI-Powered Sign Language Communication and Smart Home Integration</a> (2025)</li>
+                </ul>
                 <ul class="fa-ul mb-0">
                     <li><i class="fa-li fa fa-home"></i><a target="_blank" href="https://sites.google.com/view/zahinsamsuddin/projects/auto-spray-sanitizer">Auto Sanitizer Spray</a> (2021)</li>
                 </ul>
